--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 Agents = "46ada45e-f475-11e8-01d0-f70cc89e6671"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-InteractiveDynamics = "ec714cd0-5f51-11eb-0b6e-452e7367ff84"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
